# yori

./: .gitignore  ALLOWLIST_IMPLEMENTATION.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  CZARINA_ORCHESTRATION.md  Cargo.toml  ENFORCEMENT_MODE_STATUS.md  ENHANCED_AUDIT_README.md  FINAL_STATUS.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  LICENSE  PHASE_1_CLOSEOUT.md  QA_REVIEW_REPORT.md  README.md  SECURITY.md  TASK1_COMPLETION_SUMMARY.md  TASK2_COMPLETION_SUMMARY.md  TASK_1_COMPLETION.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  TESTING_NOTES.md  TEST_SUITE_SUMMARY.md  WORKER_IDENTITY.md  conftest.py  install.sh  pyproject.toml  pytest.ini  test_enforcement_logging.py  test_migration.py  test_performance.py  test_report_generation.py  test_statistics.py  verify_implementation.py  verify_integration.sh  yori.conf.example
.czarina/: config-phase2.json  config.json
.czarina/workers/: allowlist-blocklist.md  dashboard-ui.md  documentation.md  enforcement-mode.md  integration-release.md  opnsense-plugin.md  policy-engine.md  python-proxy.md  rust-foundation.md  testing-qa.md
.czarina/workers-phase2/: block-page.md  enhanced-audit.md  integration-release.md
.github/workflows/: rust.yml  tests.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  ENFORCEMENT_GUIDE.md  FAQ.md  INSTALLATION.md  OPNSENSE_DEPLOYMENT_TEST_PLAN.md  POLICY_GUIDE.md  PROJECT_PLAN.md  QUICK_START.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/planning/: CRITICAL_GAP_ANALYSIS.md  CZARINA_PROXY_IMPLEMENTATION.md  CZARINA_ROADMAP.md  PARALLEL_EXECUTION_PLAN.md  SARK_DEPENDENCY_STATUS.md  SESSION_SUMMARY.md  YORI_COMPLETION_PLAN.md
docs/testing/: MANUAL_TEST_PLAN.md  QUICK_TEST_GUIDE.md  TEST_FIX_SUMMARY.md  V0.2.0_TEST_STATUS.md  V0.2.1_QUICK_TEST.md  V0.2.1_TEST_PLAN.md  V0.2.1_TEST_STATUS.md
examples/: cli_usage.sh  python_usage.py  yori.conf.example
opnsense/: +MANIFEST  DASHBOARD_README.md  Makefile  README.md
opnsense/src/etc/inc/plugins.inc.d/: yori.inc
opnsense/src/etc/rc.d/: yori
opnsense/src/opnsense/mvc/app/controllers/OPNsense/YORI/: ACL.xml  IndexController.php  Menu.xml
opnsense/src/opnsense/mvc/app/controllers/OPNsense/YORI/Api/: AllowlistController.php  AuditController.php  EmergencyController.php  EnforcementController.php  EnforcementStatsController.php  PolicyController.php  ServiceController.php  StatsController.php
opnsense/src/opnsense/mvc/app/models/OPNsense/YORI/: Enforcement.xml  EnforcementForm.xml  General.php  General.xml
opnsense/src/opnsense/mvc/app/views/OPNsense/YORI/: allowlist.volt  audit.volt  dashboard.volt  emergency.volt  enforcement.volt  enforcement_dashboard.volt  enforcement_timeline.volt  general.volt  index.volt  policies.volt  stats.volt
opnsense/src/opnsense/mvc/app/views/OPNsense/YORI/widgets/: enforcement_status.volt
opnsense/src/opnsense/service/conf/actions.d/: actions_yori.conf
opnsense/src/opnsense/www/css/yori/: dashboard.css
opnsense/src/opnsense/www/js/yori/: dashboard.js
packaging/: README.md
packaging/freebsd/: Makefile  pkg-descr  pkg-plist
policies/: README.md  bedtime.rego  high_usage.rego  home_default.rego  homework_helper.rego  privacy.rego
python/tests/: conftest.py  test_alerts.py  test_audit_async.py  test_detection_integration.py  test_main_cli.py  test_policy.py  test_proxy_async.py
python/yori/: __init__.py  __main__.py  alerts.py  allowlist.py  audit.py  audit_enforcement.py  block_page.py  cli.py  config.py  consent.py  detection.py  emergency.py  enforcement.py  enforcement_stats.py  main.py  models.py  override.py  policy.py  policy_loader.py  proxy.py  proxy_handlers.py  proxy_server.py  time_exceptions.py
python/yori/reports/: __init__.py  enforcement_summary.py
python/yori/templates/: block_page.html
rust/yori-core/: Cargo.toml  README.md
rust/yori-core/src/: audit.rs  cache.rs  lib.rs  policy.rs  proxy.rs
scripts/: build-freebsd.sh  build_freebsd_wheel.sh  build_on_opnsense.sh  build_wheel_on_opnsense_direct.sh  package_for_opnsense.sh  profile_baseline.py
sql/: migrate_enforcement.sql  schema.sql  schema_enforcement.sql
tests/: README.md  __init__.py  conftest.py  performance_test.py  test_audit.py  test_config.py  test_detection.py  test_integration.py  test_policy.py  test_proxy.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_blocking.py  test_e2e_proxy.py  test_enforcement_decisions.py  test_enforcement_logging.py  test_override_flow.py  test_policy_eval.py  test_proxy.py
tests/performance/: __init__.py  test_latency.py  test_throughput.py
tests/reports/: benchmarks.md  coverage.json
tests/unit/: __init__.py  test_allowlist.py  test_audit_enforcement.py  test_block_page.py  test_config.py  test_consent.py  test_emergency.py  test_enforcement.py  test_override.py  test_policy.py  test_proxy.py  test_time_exceptions.py
