[workspace]
resolver = "2"
members = [
    "rust/yori-core",
    "rust/vendor/sark-opa",
    "rust/vendor/sark-cache",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James Henry <jamesrahenry@henrynet.ca>"]
license = "MIT"
repository = "https://github.com/apathy-ca/yori"

[workspace.dependencies]
# SARK components - vendored for YORI development
# These are minimal implementations wrapping existing Rust crates
sark-opa = { path = "rust/vendor/sark-opa" }
sark-cache = { path = "rust/vendor/sark-cache" }

# PyO3 for Python bindings (must match SARK crates)
# Note: extension-module feature is configured per-crate, not in workspace
pyo3 = "0.22"

# HTTP proxy
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
rustls = "0.21"
rustls-pemfile = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"     # Optimize for size (router constraints)
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
