[workspace]
resolver = "2"
members = [
    "rust/yori-core",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["James Henry <jamesrahenry@henrynet.ca>"]
license = "MIT"
repository = "https://github.com/apathy-ca/yori"

[workspace.dependencies]
# SARK components - git dependencies for cross-compilation
sark-opa = { git = "https://github.com/apathy-ca/sark", rev = "33b82fc6b4c3aa3c465ee9e1f849fa25c9cdcae0" }
sark-cache = { git = "https://github.com/apathy-ca/sark", rev = "33b82fc6b4c3aa3c465ee9e1f849fa25c9cdcae0" }

# For local development, use path dependencies:
#   sark-opa = { path = "../sark/rust/sark-opa" }
#   sark-cache = { path = "../sark/rust/sark-cache" }

# PyO3 for Python bindings (must match SARK crates)
pyo3 = { version = "0.22", features = ["extension-module"] }

# HTTP proxy
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
rustls = "0.21"
rustls-pemfile = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"     # Optimize for size (router constraints)
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
