[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yori"
version = "0.2.0"
description = "Zero-trust LLM governance for home networks"
authors = [
    {name = "James Henry", email = "jamesrahenry@henrynet.ca"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["llm", "governance", "proxy", "opnsense", "router"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.8.0",
    "maturin>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/apathy-ca/yori"
Repository = "https://github.com/apathy-ca/yori"
Documentation = "https://github.com/apathy-ca/yori/blob/main/README.md"
Issues = "https://github.com/apathy-ca/yori/issues"

[tool.maturin]
# Build the Rust extension as a Python module
python-source = "python"
module-name = "yori._core"
manifest-path = "rust/yori-core/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
